--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ repositories {
 }
 
 dependencies {
+    // Add jar files to compile java code
+    implementation fileTree(dir: 'libs', include: '*.jar')
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
